# ansible-sshman

./: Cargo.toml  README.md
src/: config.rs  error.rs  inventory.rs  main.rs  model.rs  modules.rs  plays.rs  subprocess.rs  tests.rs
test/: config.yml  playbook.yml  test_inv
