[package]
name = "ansible-sshman"
version = "2.0.3"
edition = "2021"
authors = ["Linus <linuskirkwood@gmail.com>"]
description = "Tool for managing SSH access to machines with Ansible."
repository = "https://github.com/lirkwood/ansible-sshman"
keywords = ["ansible", "ssh", "cli", "network", "security"]
categories = ["command-line-utilities", "config", "network-programming", "parsing", "cryptography"]
license = "GPL-3.0-or-later"

[profile.release]
strip = "debuginfo"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = {version = "1.0.197", features = ["derive"]}
serde_yaml = "0.9.34"
tempfile = "3.10.1"
