[package]
name = "ansible-sshman"
version = "4.0.0"
edition = "2021"
authors = ["Linus <linuskirkwood@gmail.com>"]
description = "Tool for managing SSH access to machines with Ansible."
repository = "https://github.com/lirkwood/ansible-sshman"
keywords = ["ansible", "ssh", "cli", "network", "security"]
categories = ["command-line-utilities", "config", "network-programming", "parsing", "cryptography"]
license = "LGPL-3.0-only"

[profile.release]
strip = "debuginfo"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.4", features = ["derive"] }
itertools = "0.14.0"
serde = {version = "1.0.197", features = ["derive"]}
serde_yaml = "0.9.34"
tempfile = "3.10.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
